Header with image is almost done: the only task to solve is overlap of image on text in mobile version

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@
 }
 
 .head-container {
-    margin-top: 50px;
+    margin-top: 40px;
     border-radius: 20px;
     background: black;
 }
@@ -110,24 +110,16 @@
 }
 
 .head-text-container {
-    transform: translateY(210px);
     padding-left: 0px;
+    border-radius: 200px;
 }
 
 .head-img-container {
-    overflow: hidden;
     border-radius: 50%; 
     box-shadow: 0px 12px 18px rgba(0, 0, 0, 0.45);
-    height: 550px;
-    transform: scale;
-    margin-left: 40px;
-}
-
-.head-img {
-    border-radius: 200px;
-    margin-left: -85%;
-    margin-top: -35%;
-    transform: scale(0.85);
+    background: url("headlogo.png");
+    background-position: center;
+    background-size: 225%;
 }
 
 .head-text {
@@ -139,4 +131,47 @@
     font-weight: normal;
     text-transform: uppercase;
 }
+@media only screen and (min-width: 360px) and (max-width: 640px) {
+    .head-translated-container {
+        transform: translateY(0);
+        display: unset;
+    }
 
+    .head-img-container {
+        width: 86vw;
+        margin: 0 auto;
+        height: 100vw;
+    }
+
+    .head-text-container {
+        width: 90vw;
+        transform: translateY(15px);
+    }
+
+    .head-text {
+        font-size: 15.9vw;
+    }
+}
+
+@media only screen and (min-width: 640px) {
+    .head-translated-container {
+        transform: translateY(7.5vw);
+    }
+
+    .head-img-container {
+        width: 35vw;
+        height: 38vw;
+        margin-left: 10px;
+    }
+
+    .head-text-container {
+        transform: translateY(11vw);
+        padding-left: 0px;
+        width: 60vw;
+        margin-left: 20px;
+    }
+
+    .head-text {
+        font-size: 9vw;
+    }
+}
